format files, add test and benchmarks to format target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ add_custom_target(
 
 add_custom_target(
   format
-  COMMAND find src applications -name "*.[c,h]*pp" -exec clang-format -i {} +
+  COMMAND find src applications test benchmarks -name "*.[c,h]*pp" -exec clang-format -i {} +
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
 include(cmake/InstallHelpers.cmake)
