--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -4,7 +4,24 @@
 add_subdirectory(fields)
 
 add_custom_command(
-    TARGET execute_benchmarks
-    COMMAND ${PROJECT_BINARY_DIR}/benchmarks/bench_blas -r XML > blas.xml
-    COMMENT "Execute Benchmarks"
+    OUTPUT ${PROJECT_BINARY_DIR}/benchmarks/fields.xml
+    COMMAND ${PROJECT_BINARY_DIR}/benchmarks/fields/${CMAKE_BUILD_TYPE}/bench_fields -r XML > fields.xml
+    COMMENT "Execute benchmarks"
 )
+
+find_package (Python COMPONENTS Interpreter Development Required)
+
+add_custom_command(
+    OUTPUT ${PROJECT_BINARY_DIR}/benchmarks/fields.png
+    COMMAND python ${PROJECT_SOURCE_DIR}/scripts/plotBenchmarks.py /benchmarks/fields/${CMAKE_BUILD_TYPE}/fields.xml
+    COMMENT "Plot benchmark results"
+)
+
+add_custom_target(
+     execute_benchmarks
+     DEPENDS ${PROJECT_BINARY_DIR}/benchmarks/fields.xml  
+	)
+add_custom_target(
+     execute_plot_benchmark
+     DEPENDS ${PROJECT_BINARY_DIR}/benchmarks/fields.png  
+	)
