--- a/benchmarks/fields/CMakeLists.txt
+++ b/benchmarks/fields/CMakeLists.txt
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
-# Add your test executable
-add_executable(bench_blas "bench_blas.cpp")
-target_link_libraries(bench_blas PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
+add_executable(bench_fields "bench_fields.cpp")
+target_link_libraries(bench_fields PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
