--- a/benchmarks/fields/CMakeLists.txt
+++ b/benchmarks/fields/CMakeLists.txt
@@ -2,4 +2,5 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_executable(bench_fields "bench_fields.cpp")
-target_link_libraries(bench_fields PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
+target_link_libraries(bench_fields PRIVATE Catch2::Catch2 NeoFOAM
+                                           Kokkos::kokkos)
