add stdc++fs to linker to fs linking issues

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,4 +21,4 @@ enable_sanitizers(
   NEOFOAM_ENABLE_SANITIZE_UB NEOFOAM_ENABLE_SANITIZE_THREAD
   NEOFOAM_ENABLE_SANITIZE_MEMORY)
 
-target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos)
+target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos stdc++fs)
