--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,17 @@ jobs:
      - name: Checkout to repository
        uses: actions/checkout@v3
 
+     - name: Install dependencies 
+       run: |
+         sudo apt install \
+          ninja-build \
+          clang-15 \
+          gcc-10 \
+          libomp-dev \
+          python3 \
+          python3-dev \
+          build-essential 
+
      - name: Get versions
        run: |
          clang --version
