fix build folder

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,4 +47,4 @@ jobs:
      - name: Build NeoFOAM
        run: |
          CXX=${{matrix.compiler}} cmake --preset default
-         cmake --build build/default
+         cmake --build build/Release
