--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,22 +21,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        compiler: [clang++, g++]
+        compiler: 
+          - CC: clang
+            CXX: clang
+          - CC: gcc
+            CXX: g++
     runs-on: ubuntu-latest
     steps:
      - name: Checkout to repository
-       uses: actions/checkout@v3
+       uses: actions/checkout@v4
 
      - name: Install dependencies 
        run: |
+         sudo apt update
          sudo apt install \
-          ninja-build \
-          clang-15 \
-          gcc-10 \
-          libomp-dev \
-          python3 \
-          python3-dev \
-          build-essential 
+           ninja-build \
+           clang-15 \
+           gcc-10 \
+           libomp-15-dev \
+           python3 \
+           python3-dev \
+           build-essential  
+         sudo apt remove clang-14
+         sudo rm /usr/bin/clang
+         sudo ln -s /usr/bin/clang-15 /usr/bin/clang
+
 
      - name: Get versions
        run: |
@@ -46,5 +55,7 @@ jobs:
 
      - name: Build NeoFOAM
        run: |
-         CXX=${{matrix.compiler}} cmake --preset default
+         CC=${{matrix.compiler.CC}} \
+         CXX=${{matrix.compiler.CXX}} \
+         cmake --preset default
          cmake --build build/Release
