add cpuonly-test config and use it in build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,5 +57,5 @@ jobs:
        run: |
          CC=${{matrix.compiler.CC}} \
          CXX=${{matrix.compiler.CXX}} \
-         cmake --preset default
-         cmake --build build/Release
+         cmake --preset ninja-cuponly-test
+         cmake --build build/ReleaseWithTests
