--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ option(NEOFOAM_DP_LABELS "double precision label" TRUE)
 option(NEOFOAM_BUILD_WITH_APPS "Build the applications folder" TRUE)
 option(NEOFOAM_BUILD_WITH_TESTS "Build the unit tests" TRUE)
 option(NEOFOAM_BUILD_APPS "Build the applications folder" TRUE)
-option(NEOFOAM_BUILD_TESTS "Build the unit tests" TRUE)
+option(NEOFOAM_BUILD_TESTS "Build the unit tests" FALSE)
 option(NEOFOAM_BUILD_BENCHMARKS "Build benchmarks" TRUE)
 option(NEOFOAM_BUILD_DOC "Build documentation" FALSE)
 
