--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,5 +57,5 @@ jobs:
        run: |
          CC=${{matrix.compiler.CC}} \
          CXX=${{matrix.compiler.CXX}} \
-         cmake --preset ninja-cuponly-test
+         cmake --preset ninja-cpuonly-test
          cmake --build build/ReleaseWithTests
