--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,6 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
-FetchContent_Declare(
-Catch2
-GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-GIT_TAG v3.4.0 # or a later release
-)
-FetchContent_MakeAvailable(Catch2)
-
+include(${PROJECT_SOURCE_DIR}/cmake/Catch2.cmake)
 add_executable(test_blas "test_Field.cpp")
 target_link_libraries(test_blas PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
