--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
       matrix: 
         compiler: 
           - CC: clang
-            CXX: clang
+            CXX: clang++
           - CC: gcc
             CXX: g++
     runs-on: ubuntu-latest
@@ -31,20 +31,28 @@ jobs:
      - name: Checkout to repository
        uses: actions/checkout@v4
 
+     - name: Add clang repo 
+       run: |
+         sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main'
+         wget https://apt.llvm.org/llvm-snapshot.gpg.key
+         sudo apt-key add llvm-snapshot.gpg.key
+
      - name: Install dependencies 
        run: |
          sudo apt update
          sudo apt install \
            ninja-build \
-           clang-15 \
+           clang-16 \
            gcc-10 \
-           libomp-15-dev \
+           libomp-16-dev \
            python3 \
            python3-dev \
            build-essential  
          sudo apt remove clang-14
          sudo rm /usr/bin/clang
-         sudo ln -s /usr/bin/clang-15 /usr/bin/clang
+         sudo rm /usr/bin/clang++
+         sudo ln -s /usr/bin/clang-16 /usr/bin/clang
+         sudo ln -s /usr/bin/clang++-16 /usr/bin/clang++
 
 
      - name: Get versions
