ENH: gaussGreen compiles with Field concept

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,9 +11,16 @@ target_include_directories(
 
 target_sources(
   NeoFOAM
-  PRIVATE "core/Time.cpp" "core/Error.cpp" "core/Kokkos.cpp"
-          "executor/OMPExecutor.cpp" "executor/GPUExecutor.cpp"
-          "executor/CPUExecutor.cpp")
+  PRIVATE 
+  "core/Time.cpp"
+  "core/Error.cpp"
+  "core/Kokkos.cpp"
+  "executor/OMPExecutor.cpp"
+  "executor/GPUExecutor.cpp"
+  "executor/CPUExecutor.cpp"
+  "mesh/unstructuredMesh/unstructuredMesh.cpp"
+  "cellCentredFiniteVolume/bcFields/scalar/fvccScalarFixedValueBoundaryField.cpp"
+  "cellCentredFiniteVolume/grad/gaussGreenGrad.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
