--- a/.github/workflows/test_build_doc.yml
+++ b/.github/workflows/test_build_doc.yml
@@ -1,10 +1,6 @@
 name: Docs
 
 on:
-  push:
-    branches: 
-      - dev
-      - main
   pull_request:
     types: synchronize
   
@@ -21,14 +17,14 @@ jobs:
       uses: actions/checkout@v3
     - name: Build docs
       run: |
-        mkdir build
-        cd build
-        cmake -DNEOFOAM_BUILD_DOC=On ..
+        mkdir -p build/test
+        cd build/pr
+        cmake -DNEOFOAM_BUILD_DOC=On ../..
         cmake --build . -t doc
-        cp -r docs/doxygen docs/sphinx/pr
+        cp -r docs/doxygen docs/sphinx
         cd docs/sphinx
         touch .nojekyll
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: build/docs/sphinx
+        folder: build/test/docs/sphinx
