--- a/.github/workflows/test_build_doc.yml
+++ b/.github/workflows/test_build_doc.yml
@@ -17,8 +17,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Build docs
       run: |
+        mkdir build
         mkdir -p build/test
-        cd build/pr
+        cd build/test
         cmake -DNEOFOAM_BUILD_DOC=On ../..
         cmake --build . -t doc
         cp -r docs/doxygen docs/sphinx
