fix path, add some words about fields

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy Test Build
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: build/test/docs/sphinx
+        folder: build/docs/sphinx
         target-folder: test_build
     - name: Deploy Build
       if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main'
