Add build presets

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,7 +66,7 @@ jobs:
          CC=${{matrix.compiler.CC}} \
          CXX=${{matrix.compiler.CXX}} \
          cmake --preset ninja-cpuonly-all
-         cmake --build build/ReleaseAll
+         cmake --build  --preset ninja-cpuonly-all
 
      - name: Execute unit tests NeoFOAM
        run: |
