add missing sanitizer call

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,11 @@ if(${NEOFOAM_DP_LABEL})
   target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_LABEL=1)
 endif()
 
+enable_sanitizers(
+  NeoFOAM ${NEOFOAM_ENABLE_SANITIZE_ADDRESS} ${NEOFOAM_ENABLE_SANITIZE_LEAK}
+  ${NEOFOAM_ENABLE_SANITIZE_UB} ${NEOFOAM_ENABLE_SANITIZE_THREAD}
+  ${NEOFOAM_ENABLE_SANITIZE_MEMORY})
+
 if(NEOFOAM_BUILD_APPS)
   add_subdirectory(applications)
 endif()
