NeoFOAM dictionary prototype

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,12 @@ target_include_directories(
 
 target_sources(
   NeoFOAM
-  PRIVATE "core/Time.cpp" "core/Error.cpp" "core/Kokkos.cpp"
-          "executor/OMPExecutor.cpp" "executor/GPUExecutor.cpp"
+  PRIVATE "core/Time.cpp"
+          "core/Dictionary.cpp"
+          "core/Error.cpp"
+          "core/Kokkos.cpp"
+          "executor/OMPExecutor.cpp"
+          "executor/GPUExecutor.cpp"
           "executor/CPUExecutor.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
