--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,7 @@ include(CTest)
 enable_testing()
 add_test(NAME field_test COMMAND test_field)
 add_test(NAME executor_test COMMAND test_executor)
+
+add_executable(test_dictionary "test_dictionary.cpp")
+target_link_libraries(test_dictionary PRIVATE Catch2::Catch2WithMain NeoFOAM)
+add_test(NAME dictionary_test COMMAND test_dictionary)
