add integration tests and cli arg parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,12 @@ target_include_directories(
 
 target_sources(
   NeoFOAM
-  PRIVATE "core/Time.cpp" "core/Error.cpp" "core/Kokkos.cpp"
-          "executor/OMPExecutor.cpp" "executor/GPUExecutor.cpp"
+  PRIVATE "core/Time.cpp"
+          "core/Error.cpp"
+          "core/Kokkos.cpp"
+          "core/runTime.cpp"
+          "executor/OMPExecutor.cpp"
+          "executor/GPUExecutor.cpp"
           "executor/CPUExecutor.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
@@ -23,10 +27,5 @@ enable_sanitizers(
 
 target_link_libraries(
   NeoFOAM
-  PUBLIC
-    spdlog::spdlog_header_only
-  PRIVATE
-    cxxopts::cxxopts
-    Kokkos::kokkos
-    nlohmann_json::nlohmann_json
-  )
+  PUBLIC spdlog::spdlog_header_only
+  PRIVATE cxxopts::cxxopts Kokkos::kokkos nlohmann_json::nlohmann_json)
