seperated source and header files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,8 @@ target_sources(
   "executor/CPUExecutor.cpp"
   "mesh/unstructuredMesh/unstructuredMesh.cpp"
   "mesh/unstructuredMesh/BoundaryMesh.cpp"
+  
+  "cellCentredFiniteVolume/bcFields/fvccBoundaryFieldSelector.cpp"
   "cellCentredFiniteVolume/bcFields/vol/scalar/fvccScalarFixedValueBoundaryField.cpp"
   "cellCentredFiniteVolume/bcFields/vol/scalar/fvccScalarZeroGradientBoundaryField.cpp"
   "cellCentredFiniteVolume/bcFields/vol/scalar/fvccScalarEmptyBoundaryField.cpp"
@@ -32,7 +34,10 @@ target_sources(
   "cellCentredFiniteVolume/bcFields/vol/vector/fvccVectorCalculatedBoundaryField.cpp"
   "cellCentredFiniteVolume/bcFields/surface/scalar/fvccSurfaceScalarEmptyBoundaryField.cpp"
   "cellCentredFiniteVolume/bcFields/surface/scalar/fvccSurfaceScalarCalculatedBoundaryField.cpp"
-  "cellCentredFiniteVolume/grad/gaussGreenGrad.cpp")
+
+  "cellCentredFiniteVolume/grad/gaussGreenGrad.cpp"
+  # "cellCentredFiniteVolume/surfaceInterpolation/surfaceInterpolationFactory.cpp"
+  "cellCentredFiniteVolume/surfaceInterpolation/linear.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
