use CPM ass package manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,6 @@ include(cmake/StandardProjectSettings.cmake)
 include(cmake/CompilerWarnings.cmake)
 include(cmake/Sanitizer.cmake)
 include(cmake/StaticAnalyzers.cmake)
-include(cmake/SPDLogger.cmake)
 
 add_library(project_options INTERFACE)
 add_library(project_warnings INTERFACE)
@@ -144,4 +143,5 @@ if(NEOFOAM_DEVEL_TOOLS)
     VERBATIM)
 endif()
 
-# include(cmake/InstallHelpers.cmake) neofoam_install()
+#include(cmake/InstallHelpers.cmake)
+#neofoam_install()
