--- a/_typos.toml
+++ b/_typos.toml
@@ -2,7 +2,7 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 [files]
-extend-exclude = ["third_party/*"]
+extend-exclude = ["third_party/*", "doc/Doxyfile.in"]
 
 [default.extend-words]
 nd = "nd"
