--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 option(NEOFOAM_DP_SCALAR "double precision scalar" TRUE)
 option(NEOFOAM_DP_LABELS "double precision label" TRUE)
 option(NEOFOAM_BUILD_APPS "Build the applications folder" TRUE)
+option(NEOFOAM_DEVEL_TOOLS "Build the applications folder" TRUE)
 option(NEOFOAM_BUILD_TESTS "Build the unit tests" FALSE)
 option(NEOFOAM_BUILD_BENCHMARKS "Build benchmarks" FALSE)
 option(NEOFOAM_BUILD_DOC "Build documentation" FALSE)
@@ -93,11 +94,48 @@ if(NEOFOAM_BUILD_DOC)
   neofoam_build_docs()
 endif()
 
-add_custom_target(
-  format
-  COMMENT "Run clang-format over all files"
-  COMMAND find include src applications test benchmarks -name "*.[c,h]*pp" -exec
-          clang-format -i {} +
-  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+if(NEOFOAM_DEVEL_TOOLS)
+  find_program(PRE_COMMIT pre-commit)
+  if(NOT PRE_COMMIT)
+    message(
+      FATAL_ERROR
+        "The pre-commit command was not found."
+        "It is necessary if you want to commit changes to NeoFOAM."
+        "If that is not the case, set NEOFOAM_DEVEL_TOOLS=OFF. "
+        "Otherwise install pre-commit via pipx (or pip) using:\n"
+        "    pipx install pre-commit")
+  endif()
+
+  execute_process(
+    COMMAND "${PRE_COMMIT}" "install"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    RESULT_VARIABLE pre-commit-result
+    OUTPUT_VARIABLE pre-commit-output
+    ERROR_VARIABLE pre-commit-error)
+  if(pre-commit-result)
+    message(
+      FATAL_ERROR
+        "Failed to install the git hooks via pre-commit."
+        "Please check the error message:\n"
+        "${pre-commit-output}\n${pre-commit-error}")
+  endif()
+  if(pre-commit-output MATCHES "^Running in migration mode with existing hooks")
+    message(
+      WARNING
+        "An existing git hook was encountered during `pre-commit install`."
+        "The old git hook will also be executed."
+        "Consider removing it with `pre-commit install -f`")
+  elseif(NOT pre-commit-output MATCHES "^pre-commit installed at")
+    message(WARNING "`pre-commit install` did not exit normally."
+                    "Please check the output message:\n" "${pre-commit-output}")
+  endif()
+
+  add_custom_target(
+    format
+    COMMENT "execute precommit"
+    COMMAND bash -c "${PRE_COMMIT} run"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    VERBATIM)
+endif()
 
 # include(cmake/InstallHelpers.cmake) neofoam_install()
