deactivate DEVEL_TOOLS for build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
        run: |
          CC=${{matrix.compiler.CC}} \
          CXX=${{matrix.compiler.CXX}} \
-         cmake --preset ninja-cpuonly-all
+         cmake --preset ninja-cpuonly-all -DNEOFOAM_DEVEL_TOOLS=OFF
          cmake --build  --preset ninja-cpuonly-all
 
      - name: Execute unit tests NeoFOAM
