--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -4,7 +4,7 @@ on:
  pull_request:
     branches:
       - main
-    types: [closed, synchronize]
+    types: [closed, synchronize, opened]
 
 jobs:
   build:
