add basic executor bindings

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,7 +1,10 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
+find_package(pybind11 CONFIG)
+
 pybind11_add_module(pyNeoFOAM ${PROJECT_SOURCE_DIR}/bindings/python.cpp)
 
 target_include_directories(pyNeoFOAM PRIVATE ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(pyNeoFOAM PRIVATE NeoFOAM pybind11::pybind11)
+target_link_libraries(pyNeoFOAM PRIVATE NeoFOAM Kokkos::kokkos
+                                        pybind11::pybind11)
