ENH: added numerical operators for surfaceInterpolation, divergence and gradient

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,11 +15,14 @@ target_sources(
     "core/Dictionary.cpp"
     "core/Error.cpp"
     "core/Kokkos.cpp"
+    "primitives/vector.cpp"
     "executor/OMPExecutor.cpp"
     "executor/GPUExecutor.cpp"
     "executor/CPUExecutor.cpp"
     "mesh/unstructuredMesh/unstructuredMesh.cpp"
     "mesh/unstructuredMesh/BoundaryMesh.cpp"
+    "mesh/stencil/FvccGeometryScheme.cpp"
+    "mesh/stencil/BasicFvccGeometryScheme.cpp"
     "mesh/stencil/StencilDataBase.cpp"
     "cellCentredFiniteVolume/bcFields/vol/scalar/fvccScalarFixedValueBoundaryField.cpp"
     "cellCentredFiniteVolume/bcFields/vol/scalar/fvccScalarZeroGradientBoundaryField.cpp"
@@ -31,7 +34,12 @@ target_sources(
     "cellCentredFiniteVolume/bcFields/vol/vector/fvccVectorCalculatedBoundaryField.cpp"
     "cellCentredFiniteVolume/bcFields/fvccBoundaryFieldSelector.cpp"
     "cellCentredFiniteVolume/bcFields/surface/scalar/fvccSurfaceScalarEmptyBoundaryField.cpp"
-    "cellCentredFiniteVolume/bcFields/surface/scalar/fvccSurfaceScalarCalculatedBoundaryField.cpp")
+    "cellCentredFiniteVolume/bcFields/surface/scalar/fvccSurfaceScalarCalculatedBoundaryField.cpp"
+    "cellCentredFiniteVolume/grad/gaussGreenGrad.cpp"
+    "cellCentredFiniteVolume/surfaceInterpolation/surfaceInterpolationSelector.cpp"
+    "cellCentredFiniteVolume/surfaceInterpolation/linear.cpp"
+    "cellCentredFiniteVolume/surfaceInterpolation/upwind.cpp"
+    "cellCentredFiniteVolume/div/gaussGreenDiv.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
