CI: uses ctest with presets for testing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,4 +70,4 @@ jobs:
 
      - name: Execute unit tests NeoFOAM
        run: |
-         ctest --test-dir build/ReleaseAll/test
+         ctest --preset ninja-cpuonly-all
