CI: fix cd in wrong folder

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Build docs
       run: |
         sphinx-build -b html ./doc ./docs_build/
-        cd docs
+        cd docs_build
         touch .nojekyll
     - name: Deploy Test Build
       uses: JamesIves/github-pages-deploy-action@v4
