--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -1,10 +1,10 @@
-name: Check clang-tidy
-run-name: Check clang-tidy
+name: Build based static checks
+run-name: Build based static checks
 
 on: push
 jobs:
   build-compilation-db:
-    name: Build
+    name: Build with IWYU
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -20,6 +20,7 @@ jobs:
         sudo apt update
         sudo apt install \
            ninja-build \
+           iwyu \
            clang-16 \
            libomp-16-dev
 
@@ -28,9 +29,9 @@ jobs:
         cmake --preset ninja-cpuonly-all \
           -DNEOFOAM_DEVEL_TOOLS=OFF \
           -DCMAKE_CXX_COMPILER=clang++-16 \
-          -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
+          -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+          -DNEOFOAM_ENABLE_IWYU=ON
         cmake --build --preset ninja-cpuonly-all
-        ls build/ReleaseAll
     - uses: actions/upload-artifact@v4
       with:
         name: build-artifact
@@ -67,7 +68,7 @@ jobs:
         # Create list of .cpp files that are in this repository and part of the
         # compilation database
         # also filters out " at the begin and end of the filename
-        jq ".[] | .file" build/compile_commands.json \
+        jq ".[] | .file" build/ReleaseAll/compile_commands.json \
           | sed 's/^"\(.*\)"$/\1/' \
           | grep -F -f pattern - > files
         # run clang-tidy on all specified files
@@ -82,20 +83,3 @@ jobs:
         echo "Please use your local clang-tidy or apply the following patch:"
         git diff -p
         exit 1
-  iwyu-check:
-    name: Include what you use check
-    runs-on: ubuntu-latest
-    needs: [build-compilation-db]
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/download-artifact@v4
-      with:
-        name: build-artifact
-        path: build
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install \
-           iwyu \
-    - name: Run iwyu
-      run: iwyu_tool -p build/ReleaseAll
