--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -1,7 +1,9 @@
 name: Static checks
 run-name: Static checks
 
-on: push
+on:
+    pull_request:
+      types: [opened, synchronize]
 jobs:
   formatting-check:
     name: Formatting check
