rename file, fix missing omp

--- a/.github/workflows/build_with_static_checks.yml
+++ b/.github/workflows/build_with_static_checks.yml
@@ -54,7 +54,8 @@ jobs:
       run: |
         sudo apt update
         sudo apt install \
-           clang-tidy-16
+           clang-tidy-16 \
+           libomp-16-dev
 
     - uses: actions/download-artifact@v4
       with:
