--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          ec2-image-id: ami-03af087024bfdbbee # Deep learning AMI
+          ec2-image-id: ami-03af087024bfdbbee
           ec2-instance-type: g4dn.xlarge
           iam-role-name: Role4Github
           subnet-id: subnet-b5d2adbb
