try workflow trigger

--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -1,6 +1,9 @@
 name: Compile on AWS
 run-name: Compile on AWS
 on:
+  pull_request:
+    types: [opened, synchronize]
+
   # enable to manually trigger the tests
   workflow_dispatch:
 jobs:
