--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -53,16 +53,15 @@ jobs:
                  aws s3 cp s3://ucfd-share/pcluster/3.x/alinux2/x86_64/postinstall_github .
                  chmod +x postinstall_github
                  sudo ./postinstall_github > ~/install.log
-                 ln -s /share/software/cmake/3.22.6/share/cmake-3.22 /usr/share/cmake-3.22
                  mkdir -p /share/ec2-user
                  export USER=ec2-user
   do-the-job:
-    name: Do the job on the runner
+    name: Build on aws
     needs: start-runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
     steps:
       - name: Checkout NeoFOAM
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: Build NeoFOAM
         if: always()
         shell: bash -o pipefail -i {0}
